syntax = "proto3";

option go_package = "./pb";

message SignUpRequest{
    string name = 1;
    string email = 2;
    string password = 3;
    string confirm_password = 4;
}

message SignUpResponse{
    string response = 1;
}

message LoginRequest{
    string nameOrEmail = 1;
    string password = 2;
}

message LoginResponse{
    string response = 1;
}

service Registration{
    rpc SignUp (SignUpRequest) returns (SignUpResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
}